tests/lean/695.lean.expected.out
695.lean:7:4: error: not an inductive type: with_zero ℕ
